<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="80dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconSlide"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="-10dp"
        app:srcCompat="@drawable/ic_icons8_finish_flag"
        app:tint="@color/teal_700" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title_level"
        android:textColor="@color/purple_500"
        android:textSize="30sp"

        />

    <TextView
        style="@style/frontLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/select_level"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/hard_game"
            style="@style/miniIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:drawableTop="@drawable/ic_round_star"
            android:hapticFeedbackEnabled="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/hard"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/medium_game"
            style="@style/miniIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:drawableTop="@drawable/ic_round_star_half"
            android:hapticFeedbackEnabled="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/medium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/easy_game"
            style="@style/miniIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:drawableTop="@drawable/ic_round_star_border"
            android:hapticFeedbackEnabled="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/easy"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/level_note"
        android:textColor="@color/gray"
        android:textSize="18sp" />

</LinearLayout>