<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backNight"
    android:gravity="center"
    android:clickable="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iconSlide"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="-10dp"
        app:srcCompat="@drawable/ic_icons8_info"
        app:tint="@color/teal_700" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title_about_game"
        android:textColor="@color/purple_500"
        android:textSize="30sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_game"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textSize="18sp"
        style="@style/frontLight"
        android:lineHeight="30dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:lineHeight="30dp"
        />


</LinearLayout>