<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroFragment1"
    android:padding="30dp"
    android:gravity="center_horizontal"
    android:clickable="true">


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:src="@drawable/intro_icon_lamp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="8dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/nav_btn">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/title_intro_1"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:textSize="30sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_intro_1"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            style="@style/frontLight"
            android:lineHeight="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/next_btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            tools:ignore="MissingConstraints"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>