<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ai_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lets_go"
            android:textColor="@color/teal_700"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            style="@style/frontLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/default_point"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/level"
            style="@style/frontLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/tap_to_start"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <Button
                android:id="@+id/leftNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:hapticFeedbackEnabled="true"
                android:padding="10dp"
                android:text="11"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rightNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:hapticFeedbackEnabled="true"
                android:padding="10dp"
                android:text="88"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button"
            android:hapticFeedbackEnabled="true"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/equal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mach_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="# Second Challenge"
            android:textColor="@color/gray"
            android:textSize="19sp" />
        <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Programmed by MimSad with 💖"
            android:padding="10dp"
            android:textColor="#2B2B2B"
            android:textSize="18sp"
            /> -->

        <LinearLayout
            android:id="@+id/save_and_share_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/share_from_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:paddingRight="8dp"
                app:srcCompat="@drawable/ic_round_share"
                app:tint="@color/gray" />

            <Button
                android:id="@+id/see_best"
                style="@style/miniIcons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/my_mini_button"
                android:drawableRight="@drawable/ic_round_local_fire_department"
                android:hapticFeedbackEnabled="true"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/see_the_best_record"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/save_on_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:paddingLeft="8dp"
                app:srcCompat="@drawable/ic_icons8_save"
                app:tint="@color/gray" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/party_poppers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/party_poppers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/watermark"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/watermark_fill"
        android:layout_margin="15dp"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>